scrollbar fix

--- a/src/scss/flat-selector-list.scss
+++ b/src/scss/flat-selector-list.scss
@@ -2,6 +2,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  overflow-y: auto;
 }
 
 .flat-selector-list__item {
