--- a/src/scss/flat-selector.scss
+++ b/src/scss/flat-selector.scss
@@ -54,7 +54,7 @@
 
 .flat-selector__flats-grid {
   flex: 0 0 50%;
-  overflow: auto;
+  overflow-y: auto;
 }
 
 .flat-selector__flats-list-title {
